04-labels.yaml
kind: Pod
apiVersion: v1
metadata:
  name: labels
  labels:
    Technology: K8
    Environment: dev
spec:
  containers:
  - name: nginx
    image: nginx

## labels are mandatory in k8. They are used to identify resources.
# To create the internal resources, i.e inside of K8, They won't allow special characters
