06-env.yaml
kind: Pod
apiVersion: v1
metadata: 
  name: env-test
spec:
  containers:
  - name: nginx
    image: nginx
