07-resources.yaml
kind: Pod
apiVersion: v1
metadata:
  name: resources
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
# limits should be atleast or more than requests i.e hard limit
      limits:
        cpu: "150m"
        memory: "256Mi"

# use describe to view info in pod
