09-pod-config.yaml
# we are reffering the configurations given in 08-config file for this pod

apiVersion: v1
kind: Pod
metadata:
  name: pod-config
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "150m"
          memory: "256Mi"
    # env:
    # - name: Technology
    #   valueFrom:
    #     configMapKeyRef:
    #       name: devopskk
    #       key: Technology
    # - name: github
    #   valueFrom:
    #     configMapKeyRef:
    #       name: devopskk
    #       key: github

# loggin to pod and give env
