17-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    name: nginx
    purpose: deployment
    tier: webtier
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      name: nginx
      purpose: deployment
      tier: webtier
  template:
    metadata:
      labels:
        name: nginx
        purpose: deployment
        tier: webtier
    spec:
      restartPolicy: Always
      containers:
      - name: nginx
        image: nginx:stable-perl
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5


# Deployment creates new pods with latest version - we updates new image, it updated new version. 
# Using RS we can't acheive this
# Deployment creates replicasets, replicasets creates pods, pods create containers
