18-emptyDir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Emptydir
spec:
  containers:
  - name: container1
    image: busybox
    command: [ "sh", "-c", "echo Hello from container1 > /data/container1.txt; sleep 3600" ]
    volumeMounts:
    - mountPath: /data
      name: shared-data
  - name: container2
    image: busybox
    command: [ "sh", "-c", "while true; do cat /data/container1.txt; sleep 10; done" ]
    volumeMounts:
    - mountPath: /data
      name: shared-data
  volumes:
  - name: shared-data
    emptyDir: {}

# it's a volume in a temporary directory(above ex- /data), pod removed from node - data removed.
# Volume is created in nodes local storage - and sharing files b/w containers in SAME pod
