13-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  selector:
    Tehnology: k8
    Environment: dev
    Component: frontend
    project: expense
  ports:
  - protocol: TCP
    port: 80 #service port
    targetPort: 80 #Target port

# kubectl describe service nginx  --- u get ip num of service -- this is cluster
# kubectl get pod nginx -o wide --- get pod details with ip's
