14-node-port.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    Tehnology: k8
    Environment: dev
    Component: frontend
    project: expense
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32000 #fixing nodeport number
