15-load-balancer...yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-lb
spec:
  type: LoadBalancer
  selector:
    Tehnology: k8
    Environment: dev
    Component: frontend
    project: expense
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32000
